Race Create fixes

--- a/SailScores.Web/Views/Admin/Edit.cshtml
+++ b/SailScores.Web/Views/Admin/Edit.cshtml
@@ -57,7 +57,7 @@
             </div>
             <div class="form-group">
                 <label asp-for="Initials" class="control-label"></label>
-                <input asp-for="Initials" class="form-control" />
+                <input asp-for="Initials" class="form-control disabled" />
                 <span asp-validation-for="Initials" class="text-danger"></span>
             </div>
             <div class="form-group">
