--- a/SailScores.Web/Views/Home/Index.cshtml
+++ b/SailScores.Web/Views/Home/Index.cshtml
@@ -7,7 +7,7 @@
 <hr class="my-4">
 <div class="row">
     <div class="col-md-6 order-md-first order-last">
-        <h4>Sailscores features</h4>
+        <h4>SailScores features</h4>
         <ul>
             <li>Fast, simple result entry using the web.</li>
             <li>Series and clubs have easy to remember direct links to pages.</li>
