--- a/SailScores.Web/Views/Shared/_Layout.cshtml
+++ b/SailScores.Web/Views/Shared/_Layout.cshtml
@@ -50,7 +50,7 @@
         <hr />
         <footer>
             <div class="row">
-                <div class="col-12 col-sm-6">&copy; 2019 - J. Fraser</div>
+                <div class="col-12 col-sm-6"><small>&copy; 2019 - J. Fraser</small></div>
                 <div class="col-12 col-sm-6 text-sm-right">
                         @await Html.PartialAsync("_LoginPartial")
                 </div>
