--- a/SailScores.Web/Views/Account/Login.cshtml
+++ b/SailScores.Web/Views/Account/Login.cshtml
@@ -58,12 +58,12 @@
                 var loginProviders = (await SignInManager.GetExternalAuthenticationSchemesAsync()).ToList();
                 if (loginProviders.Count == 0)
                 {
-                    <div>
+                    @*<div>
                         <p>
                             There are no external authentication services configured. See <a href="https://go.microsoft.com/fwlink/?LinkID=532715">this article</a>
                             for details on setting up this ASP.NET application to support logging in via external services.
                         </p>
-                    </div>
+                    </div>*@
                 }
                 else
                 {
