--- a/SailScores.Web/Views/Account/Login.cshtml
+++ b/SailScores.Web/Views/Account/Login.cshtml
@@ -51,19 +51,19 @@
         </section>
     </div>
     <div class="col-md-6 col-md-offset-2">
-        <section>
+        @*<section>
             <h4>Use another service to log in.</h4>
             <hr />
             @{
                 var loginProviders = (await SignInManager.GetExternalAuthenticationSchemesAsync()).ToList();
                 if (loginProviders.Count == 0)
                 {
-                    @*<div>
+                    <div>
                         <p>
                             There are no external authentication services configured. See <a href="https://go.microsoft.com/fwlink/?LinkID=532715">this article</a>
                             for details on setting up this ASP.NET application to support logging in via external services.
                         </p>
-                    </div>*@
+                    </div>
                 }
                 else
                 {
@@ -79,7 +79,7 @@
                     </form>
                 }
             }
-        </section>
+        </section>*@
     </div>
 </div>
 
