--- a/SailScores.Web/Views/Club/Index.cshtml
+++ b/SailScores.Web/Views/Club/Index.cshtml
@@ -1,4 +1,6 @@
+﻿@using Microsoft.AspNetCore.Mvc.Localization
 ﻿@using SailScores.Web.Extensions;
+@inject IViewLocalizer Localizer
 @model SailScores.Web.Models.SailScores.ClubSummaryViewModel
 @{
     ViewBag.Title = Model.Name + " Scores";
