--- a/SailScores.Web/Views/Home/About.cshtml
+++ b/SailScores.Web/Views/Home/About.cshtml
@@ -26,7 +26,9 @@
 Planned features include:
 <ul>
     <li>Integration with social media, such as automatic posting of results to Twitter.</li>
+    <li>Support for a regatta: different scoring system than the club's usual, and add Home club for competitors.</li>
     <li>Import and Export to integrate with existing scoring software.</li>
+    <li>Export a series to CSV or HTML so it can be posted on other sites.</li>
     <li>Result trend reporting: Are your races growing?</li>
     <li>Support for regattas and/or integration with regatta management.</li>
     <li>Fields to track race conditions, with eventual analysis for competitors in different conditions.</li>
