IsActive for competitors

--- a/SailScores.Web/Views/Admin/Index.cshtml
+++ b/SailScores.Web/Views/Admin/Index.cshtml
@@ -47,13 +47,10 @@
 <hr />
 
 <div class="row">
-    <div class="col-sm-2">
-        <strong>Quick Access</strong>
-    </div>
-    <div class="col-sm-2">
+    <div class="col-sm-4">
         <a asp-controller="Race"
            asp-action="Create"
-           class="btn btn-primary btn-sm">Create New Race</a>
+           class="btn btn-outline-primary btn-sm">Create New Race</a>
     </div>
 </div>
 <hr />
