--- a/SailScores.Web/Views/Competitor/Create.cshtml
+++ b/SailScores.Web/Views/Competitor/Create.cshtml
@@ -33,6 +33,11 @@
                 <input asp-for="BoatName" class="form-control" />
                 <span asp-validation-for="BoatName" class="text-danger"></span>
             </div>
+            <div class="form-check">
+                <input type="checkbox" name="IsActive" value="true" class="form-check-input" checked />
+                <label asp-for="IsActive" class="control-label"></label>
+                <span asp-validation-for="IsActive" class="text-danger"></span>
+            </div>
             <div class="form-group">
                 <label asp-for="Notes" class="control-label"></label>
                 <input asp-for="Notes" class="form-control" />
@@ -40,7 +45,7 @@
             </div>
             <div class="form-group">
                 <label asp-for="BoatClassId" class="control-label">Class <em>Required</em></label>
-                <select asp-for="BoatClassId" class="form-control" >
+                <select asp-for="BoatClassId" class="form-control">
                     <option selected="selected">Select a class...</option>
                     @foreach (var boatclass in Model.BoatClassOptions)
                     {
@@ -52,11 +57,11 @@
                 <span asp-validation-for="BoatClassId" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <input type="submit" value="Create" class="btn btn-primary" />
+                <input type="submit" value="Create" class="btn btn-primary my-2" />
                 <a asp-controller="Admin"
-                    asp-action="Index"
-                    asp-fragment="competitors"
-                    class="btn btn-outline-primary">Cancel</a>
+                   asp-action="Index"
+                   asp-fragment="competitors"
+                   class="btn btn-outline-primary">Cancel</a>
             </div>
         </form>
     </div>
