--- a/SailScores.Web/Views/Series/Edit.cshtml
+++ b/SailScores.Web/Views/Series/Edit.cshtml
@@ -16,7 +16,14 @@
             <input type="hidden" asp-for="ClubId" />
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <div class="form-group">
-                <label asp-for="Name" class="control-label"></label>
+                <label asp-for="Name" class="control-label">
+                    Name<br />
+                        <em>
+                            Used for links to this series. If the name is
+                            changed, external links to this series will
+                            probably fail. SailScores automatically updates internal links.
+                        </em>
+                </label>
                 <input asp-for="Name" class="form-control" />
                 <span asp-validation-for="Name" class="text-danger"></span>
             </div>
