--- a/SailScores.Web/Views/Race/Create.cshtml
+++ b/SailScores.Web/Views/Race/Create.cshtml
@@ -1,14 +1,13 @@
 ﻿@model SailScores.Web.Models.SailScores.RaceWithOptionsViewModel
 
 @{
-    ViewData["Title"] = "Create";
-    Layout = "~/Views/Shared/_ClubLayout.cshtml";
+    ViewBag.Title = "Edit Race";
+    Layout = "_ClubLayout";
 }
 
-<h4>Add a new race</h4>
-
-<hr />
-<div class="row">
+<div class="container p-0 justify-content-between">
+    <h4>Add a new race</h4>
+    <hr />
     <form id="raceform" asp-action="Create">
         <input type="hidden" id="clubId" asp-for="ClubId" />
         <div asp-validation-summary="ModelOnly" class="text-danger"></div>
@@ -71,23 +70,42 @@
             Add result: <input id="newCompetitor" type="text" />
             <input type="button" value="Add Competitor" class="btn btn-primary" /><br />
         </div>
-        <div class="container">
-            <ul class="list-group col-12" id="results">
-                <li class="list-group-item" id="competitorTemplate" style="display: none;">
-                    <span class="badge badge-secondary badge-pill race-place"></span>
-                    <span class="sail-number"></span>
-                    <span class="competitor-name h5"></span>
-                    <div class="float-right pl-3"><span class="fas fa-arrows-alt-v"></span></div>
-                    <select class="float-right select-code" onchange="window.SailScores.calculatePlaces()">
+        <ul class="list-group col-12" id="results">
+            <li class="list-group-item" id="competitorTemplate" style="display: none;">
+                <div class="d-flex w-100">
+
+                    <div class="d-none d-md-block">
+                        <button class="btn btn-light" type="button" onclick="window.SailScores.moveUp()"><span class="fa fa-angle-up"></span></button>
+                        <button class="btn btn-light" type="button" onclick="window.SailScores.moveDown()"><span class="fa fa-angle-down"></span></button>
+                    </div>
+                    <div>
+                        <span class="badge badge-secondary badge-pill race-place"></span>
+                    </div>
+                    <div>
+                        <span class="sail-number"></span>
+                    </div>
+                    <div>
+                        <span class="competitor-name h5"></span>
+                    </div>
+                </div>
+                <div class="float-left pl-3 d-block d-md-none">
+                    <button class="btn btn-light" type="button" onclick="window.SailScores.moveUp()"><span class="fa fa-angle-up"></span></button>
+                    <button class="btn btn-light" type="button" onclick="window.SailScores.moveDown()"><span class="fa fa-angle-down"></span></button>
+                    &ensp;
+                    <button class="btn btn-light" type="button" data-toggle="modal" data-target="#deleteConfirm"><span class="fa fa-trash-o"></span></button>
+                </div>
+                &ensp;
+                <div class="float-right">
+                    <select class="select-code form-control form-control-sm" onchange="window.SailScores.calculatePlaces()">
                         <option>No Code</option>
                         @foreach (var code in Model.ScoreCodeOptions)
                         {
                             <option>@code.Name</option>
                         }
                     </select>
-                </li>
-            </ul>
-        </div>
+                </div>
+            </li>
+        </ul>
         <hr />
         <div class="row">
             <span id="submitDisabledMessage" visble>The Save function is still loading...</span>
@@ -102,15 +120,13 @@
             </div>
         </div>
     </form>
+    <hr />
 </div>
 @section Scripts {
     @{await Html.RenderPartialAsync("_ValidationScriptsPartial");}
     <script src="~/vendor/bootstrap-select/js/bootstrap-select.min.js"></script>
     <script src="~/js/raceEditor.build.js"></script>
-    <script src="~/vendor/dragula/dragula.js"></script>
     <script src="~/vendor/devbridge-autocomplete/jquery.autocomplete.js"></script>
-    <link href="~/vendor/dragula/dragula.css" rel="stylesheet" />
-
 
     <script>
         var scoreCodes = @Html.Raw(Json.Serialize(Model.ScoreCodeOptions));
