--- a/SailScores.Web/Views/Race/Create.cshtml
+++ b/SailScores.Web/Views/Race/Create.cshtml
@@ -77,6 +77,12 @@
                     <div class="d-none d-md-block">
                         <button class="btn btn-light" type="button" onclick="window.SailScores.moveUp()"><span class="fa fa-angle-up"></span></button>
                         <button class="btn btn-light" type="button" onclick="window.SailScores.moveDown()"><span class="fa fa-angle-down"></span></button>
+                        &ensp;
+                        <button class="btn btn-light delete-button" type="button" data-toggle="modal"
+                                data-target="#deleteConfirm"
+                                onclick="window.SailScores.confirmDelete()">
+                            <span class="far fa-trash-alt text-danger"></span>
+                        </button>
                     </div>
                     <div>
                         <span class="badge badge-secondary badge-pill race-place"></span>
@@ -92,7 +98,11 @@
                     <button class="btn btn-light" type="button" onclick="window.SailScores.moveUp()"><span class="fa fa-angle-up"></span></button>
                     <button class="btn btn-light" type="button" onclick="window.SailScores.moveDown()"><span class="fa fa-angle-down"></span></button>
                     &ensp;
-                    <button class="btn btn-light" type="button" data-toggle="modal" data-target="#deleteConfirm"><span class="fa fa-trash-o"></span></button>
+                    <button class="btn btn-light delete-button" type="button" data-toggle="modal"
+                            data-target="#deleteConfirm"
+                            onclick="window.SailScores.confirmDelete()">
+                        <span class="far fa-trash-alt text-danger"></span>
+                    </button>
                 </div>
                 &ensp;
                 <div class="float-right">
@@ -122,6 +132,32 @@
     </form>
     <hr />
 </div>
+
+<div class="modal fade" id="deleteConfirm" tabindex="-1" role="dialog" aria-labelledby="deleteConfirmLabel" aria-hidden="true">
+    <div class="modal-dialog" role="document">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h5 class="modal-title" id="deleteConfirmLabel">Delete result?</h5>
+                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                    <span aria-hidden="true">&times;</span>
+                </button>
+            </div>
+            <div class="modal-body">
+                <form>
+                    <div class="form-group">
+                        <p> Delete the result for <span id="competitorNameToDelete"></span>?</p>
+                    </div>
+                    <input id="compIdToDelete" type="hidden" />
+                </form>
+            </div>
+            <div class="modal-footer">
+                <button type="button" class="btn btn-secondary" data-dismiss="modal">Cancel</button>
+                <button type="button" class="btn btn-primary" onclick="window.SailScores.deleteResult()">Delete</button>
+            </div>
+        </div>
+    </div>
+</div>
+
 @section Scripts {
     @{await Html.RenderPartialAsync("_ValidationScriptsPartial");}
     <script src="~/vendor/bootstrap-select/js/bootstrap-select.min.js"></script>
