--- a/SailScores.Web/Views/Race/Edit.cshtml
+++ b/SailScores.Web/Views/Race/Edit.cshtml
@@ -78,7 +78,11 @@
                         <button class="btn btn-light" type="button" onclick="window.SailScores.moveUp()"><span class="fa fa-angle-up"></span></button>
                         <button class="btn btn-light" type="button" onclick="window.SailScores.moveDown()"><span class="fa fa-angle-down"></span></button>
                         &ensp;
-                        <button class="btn btn-light" type="button" onclick="window.SailScores.deleteResult()"><span class="fa fa-trash-o"></span></button>
+                        <button class="btn btn-light delete-button" type="button" data-toggle="modal"
+                                data-target="#deleteConfirm"
+                                onclick="window.SailScores.confirmDelete()">
+                            <span class="far fa-trash-alt text-danger"></span>
+                        </button>
                     </div>
                     <div>
                         <span class="badge badge-secondary badge-pill race-place"></span>
@@ -94,7 +98,11 @@
                     <button class="btn btn-light" type="button" onclick="window.SailScores.moveUp()"><span class="fa fa-angle-up"></span></button>
                     <button class="btn btn-light" type="button" onclick="window.SailScores.moveDown()"><span class="fa fa-angle-down"></span></button>
                     &ensp;
-                    <button class="btn btn-light" type="button" onclick="window.SailScores.deleteResult()"><span class="fa fa-trash-o"></span></button>
+                    <button class="btn btn-light delete-button" type="button" data-toggle="modal"
+                            data-target="#deleteConfirm"
+                            onclick="window.SailScores.confirmDelete()">
+                        <span class="far fa-trash-alt text-danger"></span>
+                    </button>
                 </div>
                 <div class="float-right">
                     <select class="select-code form-control form-control-sm" onchange="window.SailScores.calculatePlaces()">
@@ -106,7 +114,7 @@
                     </select>
                 </div>
             </li>
-            @foreach (var score in Model.Scores.OrderBy(s => s.Place != 0 ? s.Place : 1000).ThenBy(s => s.Code))
+            @foreach (var score in Model.Scores)
             {
         <li id="@score.CompetitorId" class="list-group-item"
             data-competitorid="@score.CompetitorId" data-originalScore="@score.Place">
@@ -200,18 +208,14 @@
             <div class="modal-body">
                 <form>
                     <div class="form-group">
-                        <label for="recipient-name" class="col-form-label">Recipient:</label>
-                        <input type="text" class="form-control" id="recipient-name">
-                    </div>
-                    <div class="form-group">
-                        <label for="message-text" class="col-form-label">Message:</label>
-                        <textarea class="form-control" id="message-text"></textarea>
-                    </div>
+                        <p> Delete the result for <span id="competitorNameToDelete"></span>?</p>
+                        </div>
+                    <input id="compIdToDelete" type="hidden" />
                 </form>
             </div>
             <div class="modal-footer">
                 <button type="button" class="btn btn-secondary" data-dismiss="modal">Cancel</button>
-                <button type="button" class="btn btn-primary">Delete</button>
+                <button type="button" class="btn btn-primary" onclick="window.SailScores.deleteResult()">Delete</button>
             </div>
         </div>
     </div>
